tree-sitter-abaqus/test/corpus/parameters.txt
===
Flags and key-value parameters
===
*Static
*Boundary, fixed
*Output, field, time interval=0.01, TIME MARKS=No
*Controls, parameters=time incrementation
---
(source_file
  (keyword_block
    (keyword_line
      name: (keyword_name)))
  (keyword_block
    (keyword_line
      name: (keyword_name)
      (parameter
        name: (parameter_name))))
  (keyword_block
    (keyword_line
      name: (keyword_name)
      (parameter
        name: (parameter_name))
      (parameter
        name: (parameter_name)
        value: (parameter_value
          (number)))
      (parameter
        name: (parameter_name)
        value: (parameter_value
          (text)))))
  (keyword_block
    (keyword_line
      name: (keyword_name)
      (parameter
        name: (parameter_name)
        value: (parameter_value
          (text))))))

===
Quoted string parameters and paths with spaces
===
*Include, input="C:\simulation models\mesh deck.inp"
*Material, name='Material One'
---
(source_file
  (keyword_block
    (keyword_line
      name: (keyword_name)
      (parameter
        name: (parameter_name)
        value: (parameter_value
          (string)))))
  (keyword_block
    (keyword_line
      name: (keyword_name)
      (parameter
        name: (parameter_name)
        value: (parameter_value
          (string))))))

===
Unquoted parameters with parentheses and special characters
===
*Material, name=Steel(AISI304)
*Include, input=C:\Program Files (x86)\model.inp
---
(source_file
  (keyword_block
    (keyword_line
      name: (keyword_name)
      (parameter
        name: (parameter_name)
        value: (parameter_value
          (text)))))
  (keyword_block
    (keyword_line
      name: (keyword_name)
      (parameter
        name: (parameter_name)
        value: (parameter_value
          (text))))))
